--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,9 @@
           <ul class="portfolio-cards list">
             <li class="card">
               <a href="" class="card-link link">
-                <img src="./images/img_1.jpg" alt="" class="card-photo" width="370" />
+                <div class="card-thumb">
+                  <img src="./images/img_1.jpg" alt="" class="card-photo" width="370" />
+                </div>
                 <div class="card-info">
                   <h2 class="card-title title">Технокряк</h2>
                   <p class="card-subtitle">Веб-сайт</p>
@@ -90,7 +92,9 @@
             </li>
             <li class="card">
               <a href="" class="card-link link">
-                <img src="./images/img_2.jpg" alt="" class="card-photo" width="370" />
+                <div class="card-thumb">
+                  <img src="./images/img_2.jpg" alt="" class="card-photo" width="370" />
+                </div>
                 <div class="card-info">
                   <h2 class="card-title title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -101,7 +105,9 @@
             </li>
             <li class="card">
               <a href="" class="card-link link">
-                <img src="./images/img_3.jpg" alt="" class="card-photo" width="370" />
+                <div class="card-thumb">
+                  <img src="./images/img_3.jpg" alt="" class="card-photo" width="370" />
+                </div>
                 <div class="card-info">
                   <h2 class="card-title title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="card-subtitle">Додаток</p>
@@ -110,7 +116,9 @@
             </li>
             <li class="card">
               <a href="" class="card-link link">
-                <img src="./images/img_4.jpg" alt="" class="card-photo" width="370" />
+                <div class="card-thumb">
+                  <img src="./images/img_4.jpg" alt="" class="card-photo" width="370" />
+                </div>
                 <div class="card-info">
                   <h2 class="card-title title">Проєкт <span lang="en">Prime</span></h2>
                   <p class="card-subtitle">Маркетинг</p>
@@ -119,7 +127,9 @@
             </li>
             <li class="card">
               <a href="" class="card-link link">
-                <img src="./images/img_5.jpg" alt="" class="card-photo" width="370" />
+                <div class="card-thumb">
+                  <img src="./images/img_5.jpg" alt="" class="card-photo" width="370" />
+                </div>
                 <div class="card-info">
                   <h2 class="card-title title">Проєкт <span lang="en">Boxes</span></h2>
                   <p class="card-subtitle">Додаток</p>
@@ -128,7 +138,9 @@
             </li>
             <li class="card">
               <a href="" class="card-link link">
-                <img src="./images/img_6.jpg" alt="" class="card-photo" width="370" />
+                <div class="card-thumb">
+                  <img src="./images/img_6.jpg" alt="" class="card-photo" width="370" />
+                </div>
                 <div class="card-info">
                   <h2 class="card-title title">
                     <span lang="en">Inspiration has no Borders</span>
@@ -139,7 +151,9 @@
             </li>
             <li class="card">
               <a href="" class="card-link link">
-                <img src="./images/img_7.jpg" alt="" class="card-photo" width="370" />
+                <div class="card-thumb">
+                  <img src="./images/img_7.jpg" alt="" class="card-photo" width="370" />
+                </div>
                 <div class="card-info">
                   <h2 class="card-title title">Видання <span lang="en">Limited Edition</span></h2>
                   <p class="card-subtitle">Дизайн</p>
@@ -148,7 +162,9 @@
             </li>
             <li class="card">
               <a href="" class="card-link link">
-                <img src="./images/img_8.jpg" alt="" class="card-photo" width="370" />
+                <div class="card-thumb">
+                  <img src="./images/img_8.jpg" alt="" class="card-photo" width="370" />
+                </div>
                 <div class="card-info">
                   <h2 class="card-title title">Проєкт <span lang="en">LAB</span></h2>
                   <p class="card-subtitle">Маркетинг</p>
@@ -157,7 +173,9 @@
             </li>
             <li class="card">
               <a href="" class="card-link link">
-                <img src="./images/img_9.jpg" alt="" class="card-photo" width="370" />
+                <div class="card-thumb">
+                  <img src="./images/img_9.jpg" alt="" class="card-photo" width="370" />
+                </div>
                 <div class="card-info">
                   <h2 class="card-title title"><span lang="en">Growing Business</span></h2>
                   <p class="card-subtitle">Додаток</p>
