--- a/index.html
+++ b/index.html
@@ -56,12 +56,14 @@
     <!-- Контент страницы -->
     <main class="main-page">
       <!-- Хиро -->
-      <section class="hero section">
-        <div class="container">
-          <h1 class="hero-title title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="hero-button btn">Замовити послугу</button>
-        </div>
-      </section>
+      <div class="hero-overlay">
+        <section class="hero section">
+          <div class="container">
+            <h1 class="hero-title title">Ефективні рішення для вашого бізнесу</h1>
+            <button type="button" class="hero-button btn">Замовити послугу</button>
+          </div>
+        </section>
+      </div>
       <!-- Особенности -->
       <section class="features section">
         <div class="container">
