--- a/index.html
+++ b/index.html
@@ -122,21 +122,141 @@
               <img src="./images/team1.jpg" alt="ігор" width="270" class="teammate-photo" />
               <h3 class="teammate-name title">Ігор Дем'яненко</h3>
               <p class="teammate-position">Product Designer</p>
+              <ul class="soc-list list">
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="teammate-card">
               <img src="./images/team2.jpg" alt="ольга" width="270" class="teammate-photo" />
               <h3 class="teammate-name title">Ольга Рєпіна</h3>
               <p class="teammate-position">Frontend Developer</p>
+              <ul class="soc-list list">
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="teammate-card">
               <img src="./images/team3.jpg" alt="микола" width="270" class="teammate-photo" />
               <h3 class="teammate-name title">Микола Тарасов</h3>
               <p class="teammate-position">Marketing</p>
+              <ul class="soc-list list">
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="teammate-card">
               <img src="./images/team4.jpg" alt="михайло" width="270" class="teammate-photo" />
               <h3 class="teammate-name title">Михайло Єрмаков</h3>
               <p class="teammate-position">UI Designer</p>
+              <ul class="soc-list list">
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="soc-item">
+                  <a href="" class="soc-link">
+                    <svg class="soc-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
