add clients section

--- a/index.html
+++ b/index.html
@@ -261,6 +261,12 @@
           </ul>
         </div>
       </section>
+      <!-- НАШИ КЛИЕНТЫ -->
+      <section class="our-clients section">
+        <div class="container">
+          <h2 class="clients-title title">Постійні клієнти</h2>
+        </div>
+      </section>
     </main>
     <!-- Подвал -->
     <footer class="page-footer">
