--- a/index.html
+++ b/index.html
@@ -45,10 +45,20 @@
         <!-- Контакты -->
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a href="mailto:info@devstudio.com" class="header-contact link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="header-contact link">
+              <svg class="contact-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="header-contact-item">
-            <a href="tel:+380961111111" class="header-contact link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="header-contact link">
+              <svg class="contact-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -59,8 +69,12 @@
       <div class="hero-overlay">
         <section class="hero section">
           <div class="container">
-            <h1 class="hero-title title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button" class="hero-button btn">Замовити послугу</button>
+            <h1 class="hero-title title">
+              Ефективні рішення для вашого бізнесу
+            </h1>
+            <button type="button" class="hero-button btn">
+              Замовити послугу
+            </button>
           </div>
         </section>
       </div>
@@ -70,27 +84,50 @@
           <h2 class="visually-hidden title">Особливості</h2>
           <ul class="features-list list">
             <li class="features-item">
+              <div class="features-icon-item">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="features-text">
-                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-item">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="features-text">
-                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-item">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-title title">ПЛАНУВАННЯ</h3>
               <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-item">
+                <svg class="features-icon" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="features-text">
-                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
               </p>
             </li>
           </ul>
@@ -102,13 +139,28 @@
           <h2 class="works-title title">Чим ми займаємося</h2>
           <ul class="works-list list">
             <li class="works-item">
-              <img src="./images/work1.jpg" alt="розробляємо" width="370" class="works-img" />
+              <img
+                src="./images/work1.jpg"
+                alt="розробляємо"
+                width="370"
+                class="works-img"
+              />
             </li>
             <li class="works-item">
-              <img src="./images/work2.jpg" alt="адаптуємо" width="370" class="works-img" />
+              <img
+                src="./images/work2.jpg"
+                alt="адаптуємо"
+                width="370"
+                class="works-img"
+              />
             </li>
             <li class="works-item">
-              <img src="./images/work3.jpg" alt="малюємо" width="370" class="works-img" />
+              <img
+                src="./images/work3.jpg"
+                alt="малюємо"
+                width="370"
+                class="works-img"
+              />
             </li>
           </ul>
         </div>
@@ -119,7 +171,12 @@
           <h2 class="team-title title">Наша команда</h2>
           <ul class="teammate-list list">
             <li class="teammate-card">
-              <img src="./images/team1.jpg" alt="ігор" width="270" class="teammate-photo" />
+              <img
+                src="./images/team1.jpg"
+                alt="ігор"
+                width="270"
+                class="teammate-photo"
+              />
               <h3 class="teammate-name title">Ігор Дем'яненко</h3>
               <p class="teammate-position">Product Designer</p>
               <ul class="soc-list list">
@@ -154,7 +211,12 @@
               </ul>
             </li>
             <li class="teammate-card">
-              <img src="./images/team2.jpg" alt="ольга" width="270" class="teammate-photo" />
+              <img
+                src="./images/team2.jpg"
+                alt="ольга"
+                width="270"
+                class="teammate-photo"
+              />
               <h3 class="teammate-name title">Ольга Рєпіна</h3>
               <p class="teammate-position">Frontend Developer</p>
               <ul class="soc-list list">
@@ -189,7 +251,12 @@
               </ul>
             </li>
             <li class="teammate-card">
-              <img src="./images/team3.jpg" alt="микола" width="270" class="teammate-photo" />
+              <img
+                src="./images/team3.jpg"
+                alt="микола"
+                width="270"
+                class="teammate-photo"
+              />
               <h3 class="teammate-name title">Микола Тарасов</h3>
               <p class="teammate-position">Marketing</p>
               <ul class="soc-list list">
@@ -224,7 +291,12 @@
               </ul>
             </li>
             <li class="teammate-card">
-              <img src="./images/team4.jpg" alt="михайло" width="270" class="teammate-photo" />
+              <img
+                src="./images/team4.jpg"
+                alt="михайло"
+                width="270"
+                class="teammate-photo"
+              />
               <h3 class="teammate-name title">Михайло Єрмаков</h3>
               <p class="teammate-position">UI Designer</p>
               <ul class="soc-list list">
@@ -288,10 +360,14 @@
               >
             </li>
             <li class="footer-contact-item">
-              <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="footer-contact link"
+                >info@devstudio.com</a
+              >
             </li>
             <li class="footer-contact-item">
-              <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="footer-contact link"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
         </address>
