fix hero bg / centered index page icons / fix portfolio shadow

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
     <!-- Контент страницы -->
     <main class="main-page">
       <!-- Хиро -->
-      <div class="hero-overlay">
-        <section class="hero section">
-          <div class="container">
-            <h1 class="hero-title title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button" class="hero-button btn">Замовити послугу</button>
-          </div>
-        </section>
-      </div>
+
+      <section class="hero section">
+        <div class="container">
+          <h1 class="hero-title title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="hero-button btn">Замовити послугу</button>
+        </div>
+      </section>
+
       <!-- Особенности -->
       <section class="features section">
         <div class="container">
@@ -375,7 +375,7 @@
         </div>
         <!-- Соцсети футер -->
         <div class="footer-soc-links">
-          <h3 class="footer-soc-title title">приєднуйтесь</h3>
+          <p class="footer-soc-text">приєднуйтесь</p>
           <ul class="soc-list list">
             <li class="soc-item">
               <a href="" class="soc-link">
