--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,7 @@
         </div>
         <!-- Соцсети футер -->
         <div class="footer-soc-links">
-          <h3 class="footer-soc-title title">приєднуйтесь</h3>
+          <p class="footer-soc-text">приєднуйтесь</p>
           <ul class="soc-list list">
             <li class="soc-item">
               <a href="" class="soc-link">
